[gd_scene load_steps=2 format=3 uid="uid://cbd3dmgtjb6b3"]

[ext_resource type="Script" uid="uid://dpqprcniv04fi" path="res://addons/signal_flow/ui/emit_event_dialog.gd" id="1_emit_dialog_script"]

[node name="EmitEventDialog" type="Window"]
oversampling_override = 1.0
title = "Emit Event"
position = Vector2i(0, 36)
size = Vector2i(400, 300)
script = ExtResource("1_emit_dialog_script")

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="From New Emitter" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="EventResourcePicker" type="EditorResourcePicker" parent="TabContainer/From New Emitter"]
layout_mode = 2

[node name="From Built-in Signal" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="SearchLineEdit" type="LineEdit" parent="TabContainer/From Built-in Signal"]
layout_mode = 2
placeholder_text = "Search signals..."

[node name="SignalList" type="ItemList" parent="TabContainer/From Built-in Signal"]
layout_mode = 2
size_flags_vertical = 3

[node name="CreateFromSignalButton" type="Button" parent="TabContainer/From Built-in Signal"]
layout_mode = 2
text = "Create Event from Signal"
